fix box-header--blue color on dark mode

--- a/data/colors/dark.scss
+++ b/data/colors/dark.scss
@@ -619,6 +619,8 @@ $export: (
     blue-border: $blue-7,
     row-yellow-bg: rgba(#EBC440, 0.1),
     row-blue-bg: rgba($blue-2, 0.1),
+    header-blue-bg: $gray-9,
+    header-blue-border: $gray-6,
   ),
 
   dropdown: (
