--- a/data/colors/light.scss
+++ b/data/colors/light.scss
@@ -618,6 +618,8 @@ $export: (
     blue-border: $blue-2,
     row-yellow-bg: $yellow-1,
     row-blue-bg: $blue-0,
+    header-blue-bg: $blue-0,
+    header-blue-border: $blue-2,
   ),
 
   dropdown: (
